# ChessMate

./: AI_boosted_10_5_Timer  Arduino chess timer  CMakeLists.txt  CMakeLists.txt (outside main folder)  Chess_timer.c  Chess_timer_main.c  Joystick_menu_nav.c  README.md  Timer_2-1_hardcode  Timer_programmable.c  available_moves.py  lvgl_demo_ui.c  lvgl_demo_ui.h  menu_data.c  menu_data.h  spi_lcd_touch_example_main.c
Main Code/Chessmate/main/: CMakeLists.txt  calculate_moves.c  menu.c  scan_board.c  timers.c
Main Code/project-name/main/: CMakeLists.txt  board.c  led_display.c  main.c
